# packagr-cli

./: .coveragerc  .coveralls.yml  .gitignore  .travis.yml  README.md  pyproject.toml
docs/: CNAME  README.md
packagr/: __init__.py  objects.py  packagr.py  utilities.py
packagr/commands/: admin.py  base.py  packaging.py  tokens.py
tests/: test_packagr_cli.py
