[tool.poetry]
name = "packagr-cli"
packages = [
    { include = "packagr" },
]
version = "0.2.0"
description = "A CLI for https://www.packagr.app"
readme = 'docs/README.md'
authors = ["Chris Davies <chris@packagr.app>"]

[tool.poetry.dependencies]
python = "^3.6.2"
cleo = "^0.7.2"
toml = "^0.10.0"
wheel = "^0.33.1"
requests = "^2.21"

[tool.poetry.scripts]
packagr = "packagr:run"

[tool.poetry.dev-dependencies]
cleo = "^0.7.2"
pytest = "^3.0"
coveralls = "^1.6"
mypy = "^0.670.0"
mock = "^2.0"
coverage = "^4.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
